Auto redirect when there is user_id session.

--- a/static/leftsidemenu.html
+++ b/static/leftsidemenu.html
@@ -32,12 +32,6 @@
                 </a>
             </li>
             <li class="side-nav-item">
-                <a id="changeuser" href="/" class="side-nav-link">
-                    <i class="dripicons-enter"></i>
-                    <span> Change User </span>
-                </a>
-            </li>
-            <li class="side-nav-item">
                 <a id="visualizationlink" href="/visualization/" class="side-nav-link">
                     <i class="dripicons-briefcase"></i>
                     <span> My Portfolio </span>
@@ -45,8 +39,14 @@
             </li>
             <li class="side-nav-item">
                 <a id="heatmaplink" href="/heatmap" class="side-nav-link">
-                    <i class="dripicons-briefcase"></i>
+                    <i class="dripicons-document-edit"></i>
                     <span>Edit My Portfolio </span>
+                </a>
+            </li>
+            <li class="side-nav-item" herf="/">
+                <a id="changeuser" href="/logout" class="side-nav-link">
+                    <i class="dripicons-enter"></i>
+                    <span> Change User </span>
                 </a>
             </li>
         </ul>
