portfolio daily movment

--- a/static/leftsidemenu.html
+++ b/static/leftsidemenu.html
@@ -1,8 +1,7 @@
-    
     <!-- LOGO -->
-    <a href="index.html" class="logo text-center logo-light">
+    <a href="/" class="logo text-center logo-light">
         <span class="logo-lg">
-            <img src="assets/images/logo.png" alt="" height="16">
+            <img src="https://gilhir.pythonanywhere.com/static/images/logo.png" alt="" height="16">
         </span>
         <span class="logo-sm">
             <img src="assets/images/logo_sm.png" alt="" height="16">
@@ -10,7 +9,7 @@
     </a>
 
     <!-- LOGO -->
-    <a href="index.html" class="logo text-center logo-dark">
+    <a href="/" class="logo text-center logo-dark">
         <span class="logo-lg">
             <img src="assets/images/logo-dark.png" alt="" height="16">
         </span>
@@ -18,7 +17,6 @@
             <img src="assets/images/logo_sm_dark.png" alt="" height="16">
         </span>
     </a>
-
     <div class="h-100" id="leftside-menu-container" data-simplebar>
 
         <!--- Sidemenu -->
