bad links removal

--- a/static/leftsidemenu.html
+++ b/static/leftsidemenu.html
@@ -4,17 +4,17 @@
             <img src="https://gilhir.pythonanywhere.com/static/images/logo.png" alt="" height="16">
         </span>
         <span class="logo-sm">
-            <img src="assets/images/logo_sm.png" alt="" height="16">
+            <img src="" alt="" height="16">
         </span>
     </a>
 
     <!-- LOGO -->
     <a href="/" class="logo text-center logo-dark">
         <span class="logo-lg">
-            <img src="assets/images/logo-dark.png" alt="" height="16">
+            <img src="" alt="" height="16">
         </span>
         <span class="logo-sm">
-            <img src="assets/images/logo_sm_dark.png" alt="" height="16">
+            <img src="" alt="" height="16">
         </span>
     </a>
     <div class="h-100" id="leftside-menu-container" data-simplebar>
