--- a/static/navbar-custom.html
+++ b/static/navbar-custom.html
@@ -75,7 +75,7 @@
                         <div class="d-flex align-items-center">
                             <div class="flex-shrink-0">
                                 <div class="notify-icon">
-                                    <img src="assets/images/users/avatar-2.jpg" class="img-fluid rounded-circle" alt="" />
+                                    <img src="" class="img-fluid rounded-circle" alt="" />
                                 </div>
                             </div>
                             <div class="flex-grow-1 text-truncate ms-2">
@@ -113,7 +113,7 @@
                         <div class="d-flex align-items-center">
                             <div class="flex-shrink-0">
                                 <div class="notify-icon">
-                                    <img src="assets/images/users/avatar-4.jpg" class="img-fluid rounded-circle" alt="" />
+                                    <img src="" class="img-fluid rounded-circle" alt="" />
                                 </div>
                             </div>
                             <div class="flex-grow-1 text-truncate ms-2">
@@ -147,19 +147,19 @@
                 <div class="row g-0">
                     <div class="col">
                         <a class="dropdown-icon-item" href="#">
-                            <img src="assets/images/brands/slack.png" alt="slack">
+                            <img src="" alt="slack">
                             <span>Slack</span>
                         </a>
                     </div>
                     <div class="col">
                         <a class="dropdown-icon-item" href="#">
-                            <img src="assets/images/brands/github.png" alt="Github">
+                            <img src="" alt="Github">
                             <span>GitHub</span>
                         </a>
                     </div>
                     <div class="col">
                         <a class="dropdown-icon-item" href="#">
-                            <img src="assets/images/brands/dribbble.png" alt="dribbble">
+                            <img src="" alt="dribbble">
                             <span>Dribbble</span>
                         </a>
                     </div>
@@ -168,19 +168,19 @@
                 <div class="row g-0">
                     <div class="col">
                         <a class="dropdown-icon-item" href="#">
-                            <img src="assets/images/brands/bitbucket.png" alt="bitbucket">
+                            <img src="" alt="bitbucket">
                             <span>Bitbucket</span>
                         </a>
                     </div>
                     <div class="col">
                         <a class="dropdown-icon-item" href="#">
-                            <img src="assets/images/brands/dropbox.png" alt="dropbox">
+                            <img src="" alt="dropbox">
                             <span>Dropbox</span>
                         </a>
                     </div>
                     <div class="col">
                         <a class="dropdown-icon-item" href="#">
-                            <img src="assets/images/brands/g-suite.png" alt="G Suite">
+                            <img src="" alt="G Suite">
                             <span>G Suite</span>
                         </a>
                     </div>
@@ -291,7 +291,7 @@
             <!-- item-->
             <a href="javascript:void(0);" class="dropdown-item notify-item">
                 <div class="d-flex">
-                    <img class="d-flex me-2 rounded-circle" src="assets/images/users/avatar-2.jpg" alt="Generic placeholder image" height="32">
+                    <img class="d-flex me-2 rounded-circle" src="" alt="Generic placeholder image" height="32">
                     <div class="w-100">
                         <h5 class="m-0 font-14">Erwin Brown</h5>
                         <span class="font-12 mb-0">UI Designer</span>
@@ -302,7 +302,7 @@
             <!-- item-->
             <a href="javascript:void(0);" class="dropdown-item notify-item">
                 <div class="d-flex">
-                    <img class="d-flex me-2 rounded-circle" src="assets/images/users/avatar-5.jpg" alt="Generic placeholder image" height="32">
+                    <img class="d-flex me-2 rounded-circle" src="" alt="Generic placeholder image" height="32">
                     <div class="w-100">
                         <h5 class="m-0 font-14">Jacob Deo</h5>
                         <span class="font-12 mb-0">Developer</span>
